[metadata]
name = plover-speaker-id
version = 1.0.0
description = Plover plugin for Q&A, speaker designations, and bylines
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/sammdot/plover-speaker-id
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev10
packages =
	plover_speaker_id

[options.entry_points]
plover.meta =
  ; Q&A
  question = plover_speaker_id:question
  answer = plover_speaker_id:answer
  question_dsp = plover_speaker_id:question_double_space
  answer_dsp = plover_speaker_id:answer_double_space

  ; Speaker IDs (for court reporting)
  spkr_inline = plover_speaker_id:inline_speaker_id
  colloquy = plover_speaker_id:colloquy
  colloquy_dsp = plover_speaker_id:colloquy_double_space
  byline = plover_speaker_id:byline
  byline_dsp = plover_speaker_id:byline_double_space
  ca_byline = plover_speaker_id:calif_byline
  ca_byline_dsp = plover_speaker_id:calif_byline_double_space

  ; Speaker IDs (for captioning)
  caption = plover_speaker_id:caption
  caption_dsp = plover_speaker_id:caption_double_space
  cap_speaker = plover_speaker_id:caption_speaker
  cap_speaker_dsp = plover_speaker_id:caption_speaker_double_space

  ; Aliases for common designations
  Q = plover_speaker_id:question_double_space
  A = plover_speaker_id:answer_double_space
  coll = plover_speaker_id:colloquy_double_space
  by = plover_speaker_id:byline_double_space
  ca_by = plover_speaker_id:byline_double_space
  cap = plover_speaker_id:caption_double_space
  capspkr = plover_speaker_id:caption_speaker_double_space

  ; Metas for managing speaker IDs
  speaker_id_set = plover_speaker_id:speaker_id_begin
  speaker_id_end = plover_speaker_id:speaker_id_end
  spkrid_set = plover_speaker_id:speaker_id_begin
  spkrid_end = plover_speaker_id:speaker_id_end
